# camera-pose-estimation

./: .gitignore  README.md  docker.nix  pyproject.toml  requirements.nix  requirements.txt  shell.nix
camera-pose-estimation/model/: dump_metrics.ini.sample  inference.ini.sample  mapnet_test.ini.sample  mapnet_train.ini.sample  menet_test.ini.sample  menet_train.ini.sample  posenet_test.ini.sample  posenet_train.ini.sample  run.py  test_model.py  train.py  webserver.py
camera-pose-estimation/model/criterions/: criterions.py
camera-pose-estimation/model/datasets/: absolute.py  dataset.py  relative.py
camera-pose-estimation/model/models/: mapnet.py  menet.py  posenet.py
camera-pose-estimation/model/static/: index.html
camera-pose-estimation/model/utils/: dump_metrics.py  metrics.py
camera-pose-estimation/models/me-net/: config.ini.sample  dataset.py  model.py  (+1 more)
camera-pose-estimation/tools/: automatic_reconstruction.sh  merge_datasets.sh  split_absolute_dataset.sh  split_dataset.sh  split_relative_dataset.sh  sync_data.sh  video_to_dataset.sh  video_to_images.sh
config_parser/: setup.py
config_parser/config_parser/: __init__.py  config_parser.py
docs/: .gitignore  bibliography.bib  main.tex
docs/presentation/: main.tex
docs/report/: bibliography.bib  main.tex
docs/sections/: conclusion.tex  dataset_generation_pipeline.tex  introduction.tex  materials.tex  models.tex  results.tex  soa.tex
notebooks/: crs_alignment.ipynb  position_visualization.ipynb  quaternion_exploration.ipynb  results_comparison.ipynb  split_dataset.ipynb  test_procedure.ipynb
(+25 files in other folders)
