[tool.poetry]
name = "camera-pose-estimation"
version = "0.1.0"
description = ""
authors = ["Francesco Bozzo <francesco.bozzo.99@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "1.20.2"
torch = "1.10.0"
matplotlib = "3.4.3"
jupyterlab = "3.2.1"
tqdm = "4.62.3"
pandas = "1.2.4"
torchvision = "0.11.1"
scipy = "1.7.1"
transforms3d = "0.3.1"
ffmpeg-python = "0.2.0"
Pillow = "8.4.0"
aim = "3.0.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
